[package]
name = "facebook-contrabanned"
version = "0.1.0"
authors = ["Neel Kuila <nkuila@bandwidth.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["json"] }
uuid = { version = "0.7.4", features = ["v4"] }
serde = "1.0.94"
serde_json = "1.0.40"
serde_derive = "1.0.94"
